# figure-curator

./: .gitattributes  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml
docs/: CNAME  index.html
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: Root.tsx  tokens.ts
remotion/src/components/: AppWindow.tsx  GroupCardMock.tsx  ProductCardMock.tsx  ScaledApp.tsx  ShopTicker.tsx  TitleSlate.tsx
remotion/src/data/: mock.ts
remotion/src/videos/: Edit04.tsx  Filter02.tsx  Groups03.tsx  Search01.tsx  Select05.tsx
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: grouper.rs  lib.rs
src-tauri/src/crawler/: amiami.rs  base.rs  cafe24.rs  godo.rs  goodsmile.rs  herotime.rs  makeshop.rs  mod.rs  registry.rs
src-tauri/src/fetcher/: amiami.rs  base.rs  cafe24.rs  godo.rs  goodsmile.rs  herotime.rs  makeshop.rs  mod.rs  registry.rs
